--- a/src/components/layout/components/side/index.less
+++ b/src/components/layout/components/side/index.less
@@ -3,6 +3,10 @@
 
 .sideBox {
   height: 100%;
+
+  ul {
+    padding-inline-start: 0px;
+  }
   .logoBox {
     height: 64px;
     padding: @spacer / 2;
